# CSC355-Abstract-Data-Types

./: .gitignore  CMakeLists.txt  answers.txt  main.cpp
dynamic/list/: List.cpp
linked/linkedqueue/: LinkedQueue.h
linked/linkedstack/: LinkedStack.cpp  LinkedStack.h
linkedlist/: linkedList.cpp  linkedList.h
linkedqueue/: LinkedQueue.cpp
list/: List.h
queue/: queue.cpp  queue.h
stack/: Stack.cpp  Stack.h
templates/list/: TemplateList.h
templates/queue/: TemplateQueue.h
templates/stack/: TemplateStack.h
